--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(devtools-cn)
+project(devtools-arch4edu)
 
 ## Setup
 cmake_minimum_required(VERSION 2.8)
@@ -17,11 +17,11 @@ function(install_build_script cmd)
     DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/cmds/${cmd}")
 endfunction()
 
-install_build_script(archlinuxcn-i686-build)
-install_build_script(archlinuxcn-x86_64-build)
-install_build_script(multilib-archlinuxcn-build)
+install_build_script(arch4edu-i686-build)
+install_build_script(arch4edu-x86_64-build)
+install_build_script(multilib-arch4edu-build)
 
 install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/cmds/"
   DESTINATION "${CMAKE_INSTALL_BINDIR}")
-install(FILES "pacman-archlinuxcn.conf" "pacman-multilib-archlinuxcn.conf"
+install(FILES "pacman-arch4edu.conf" "pacman-multilib-arch4edu.conf"
   DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/devtools/")
