--- a/pacman-multilib-arch4edu.conf
+++ b/pacman-multilib-arch4edu.conf
@@ -65,14 +65,6 @@ LocalFileSigLevel = Optional
 # uncommented to enable the repo.
 #
 
-[archlinuxcn]
-SigLevel = Optional TrustAll
-Server = http://repo.archlinuxcn.org/$arch
-
-[haskell-core]
-# Server = http://repo-hs.archlinuxcn.org/$arch
-Server = http://xsounds.org/~haskell/core/$arch
-
 # The testing repositories are disabled by default. To enable, uncomment the
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
@@ -92,8 +84,22 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
+# If you want to run 32 bit applications on your x86_64 system,
+# enable the multilib repositories as required here.
+
+#[multilib-testing]
+#Include = /etc/pacman.d/mirrorlist
+
+[multilib]
+Include = /etc/pacman.d/mirrorlist
+
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[arch4edu]
+SigLevel = Optional TrustAll
+Server = http://localhost/arch4edu
+
