--- a/pacman-arch4edu.conf
+++ b/pacman-arch4edu.conf
@@ -91,6 +91,5 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [arch4edu]
-SigLevel = Optional TrustAll
+SigLevel = Never TrustAll
 Server = http://localhost/arch4edu
-
