--- a/pacman-multilib-arch4edu.conf
+++ b/pacman-multilib-arch4edu.conf
@@ -100,6 +100,5 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [arch4edu]
-SigLevel = Optional TrustAll
+SigLevel = Never TrustAll
 Server = http://localhost/arch4edu
-
