--- a/pacman-arch4edu.conf
+++ b/pacman-arch4edu.conf
@@ -91,5 +91,5 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [arch4edu]
-SigLevel = Never TrustAll
-Server = http://localhost/arch4edu
+SigLevel = Never
+Server = http://mirrors.tuna.tsinghua.edu.cn/arch4edu/$arch
